@@ -1,3 +1,9 @@
+2019-11-29  Harald Anlauf  <anlauf@gmx.de>
+
+	Backport from mainline
+	PR fortran/92629
+	* gfortran.dg/pr92629.f90: New testcase.
+
 2019-11-29 Tobias Burnus  <tobias@codesourcery.com>
 
 	Backport from mainline
